--- a/zh-cn/contribute/开源合规策略及指导.md
+++ b/zh-cn/contribute/开源合规策略及指导.md
@@ -36,6 +36,8 @@
 
 2. SPDX信息规范，见[这里](oniro)
 
+3. ReadMe.OpenSource 规范（不在制品包的是否需要包含，二选一License）
+
 ### OpenHarmony社区参与上游社区贡献开源合规规范
 
 1. OpenHarmony项目上游社区贡献开源合规指导，见[这里](oniro)
@@ -43,12 +45,13 @@
 ### OpenHarmony社区第三方采购及免费软件开源合规规范
 
 1. OpenHarmony第三方采购及免费软件开源合规规范
-
+                                                                                                                                                                
 ### OpenHarmony社区开发开源合规门禁
 
 1. 开源合规开发门禁要求，见[这里](https://gitee.com/openharmony/community/blob/master/sig/sig-QA/%E4%BB%A3%E7%A0%81%E9%97%A8%E7%A6%81%E8%A6%81%E6%B1%82.md#%E5%BC%80%E6%BA%90%E5%8F%8A%E7%AC%AC%E4%B8%89%E6%96%B9)
 
 2. 开源门禁工具说明，见[这里](https://gitee.com/openharmony-sig/tools_oat#oat%E5%BC%80%E6%BA%90%E5%AE%A1%E6%9F%A5%E5%B7%A5%E5%85%B7)
+
 ### OpenHarmony 开源义务履行
 
 1. OpenHarmony开源软件Notice收集策略说明，见[这里](https://gitee.com/openharmony/build/blob/master/docs/%E5%BC%80%E6%BA%90%E8%BD%AF%E4%BB%B6Notice%E6%94%B6%E9%9B%86%E7%AD%96%E7%95%A5%E8%AF%B4%E6%98%8E.md)
