基于社区review意见修复
Signed-off-by: kubigao <jean.gaoliang@huawei.com>

--- a/zh-cn/contribute/开源合规策略及指导.md
+++ b/zh-cn/contribute/开源合规策略及指导.md
@@ -87,16 +87,18 @@
 ## 未能遵守的后果
 
 必须遵守此政策，这一点很重要。不这样做可能会导致： 
-• 我们使用的代码中的版权或其他知识产权持有人提出法律索赔； 
-• 我们代码的接收者提出的索赔； 
-• 无意中发布了不允许发布的代码； 
-• 违反监管义务可能导致罚款； 
-• 名誉损失； 
-• 资金损失； 
-• 违反合约。
+- 我们使用的代码中的版权或其他知识产权持有人提出法律索赔； 
+- 我们代码的接收者提出的索赔； 
+- 无意中发布了不允许发布的代码； 
+- 违反监管义务可能导致罚款； 
+- 名誉损失； 
+- 资金损失； 
+- 违反合约。
 
 因此，我们会严肃对待违反本政策的行为，任何违反本政策的个人都可能会受到纪律处分。
 
+## 开源合规负面事件响应策略
+1. 《社区开源合规负面事件响应策略》
 ## 参考文档
 
 本文档参考LinuxFoundation compliance generic policy FOSS policy template 
