--- a/zh-cn/contribute/开源合规策略及指导.md
+++ b/zh-cn/contribute/开源合规策略及指导.md
@@ -16,7 +16,7 @@
 
 
 ## 术语和缩略语
-
+1. 开源合规术语与缩略语参考，见[这里]()
 
 ## 开源合规策略
 
@@ -36,11 +36,11 @@
 
 2. SPDX信息规范，见[这里](oniro)
 
-3. ReadMe.OpenSource 规范（不在制品包的是否需要包含，二选一License）
+3. 关于在第三方开源软件中补充上游开源软件元数据声明文件 README.OpenSource 规范,见[这里]
 
 ### OpenHarmony社区参与上游社区贡献开源合规规范
 
-1. OpenHarmony项目上游社区贡献开源合规指导，见[这里](oniro)
+1. OpenHarmony项目上游社区贡献开源合规指导，见[这里](https://gitee.com/openharmony/docs/blob/20b5af01b3124d86bbce9cd15b0397df8b48e06b/zh-cn/contribute/%E4%B8%8A%E6%B8%B8%E7%A4%BE%E5%8C%BA%E8%B4%A1%E7%8C%AE%E5%BC%80%E6%BA%90%E5%90%88%E8%A7%84%E6%8C%87%E5%AF%BC.md)
 
 ### OpenHarmony社区第三方采购及免费软件开源合规规范
 
@@ -78,11 +78,11 @@
 
 ## 开源合规角色和责任
 
-1. 《开源合规角色职责及能力要求》
+1. 《开源合规角色职责及能力要求》,见[这里](https://gitee.com/openharmony/docs/blob/20b5af01b3124d86bbce9cd15b0397df8b48e06b/zh-cn/contribute/%E5%BC%80%E6%BA%90%E5%90%88%E8%A7%84%E8%A7%92%E8%89%B2%E8%81%8C%E8%B4%A3%E5%8F%8A%E8%83%BD%E5%8A%9B%E8%A6%81%E6%B1%82.md)
 
 ## 开源合规培训资源及要求
 
-1. 《开源合规培训计划》
+1. 《开源合规培训计划》,见[这里](https://gitee.com/openharmony/docs/blob/20b5af01b3124d86bbce9cd15b0397df8b48e06b/zh-cn/contribute/%E5%BC%80%E6%BA%90%E5%90%88%E8%A7%84%E5%9F%B9%E8%AE%AD%E8%AE%A1%E5%88%92.md)
 
 ## 未能遵守的后果
 
@@ -98,7 +98,8 @@
 因此，我们会严肃对待违反本政策的行为，任何违反本政策的个人都可能会受到纪律处分。
 
 ## 开源合规负面事件响应策略
-1. 《社区开源合规负面事件响应策略》
+1. 《社区开源合规负面事件响应策略》，请参照法务与合规组策略
+
 ## 参考文档
 
 本文档参考LinuxFoundation compliance generic policy FOSS policy template 
