Invalid link handling
Signed-off-by: jiaoyanlin3 <jiaoyanlin3@huawei.com>

--- a/zh-cn/readme/媒体子系统.md
+++ b/zh-cn/readme/媒体子系统.md
@@ -91,7 +91,7 @@
 
 如架构图示意，媒体提供了三大类功能接口，开发者可以根据使用诉求，综合使用一类或多类接口：
 
--   应用开发者使用媒体接口实现录像、预览和播放音视频，使用可以参考[多媒体开发指南](https://gitee.com/openharmony/docs/tree/master/zh-cn/application-dev/media)。
+-   应用开发者使用媒体接口实现录像、预览和播放音视频，使用可以参考[多媒体开发指南](../application-dev/media)。
 -   当使用简单播放录制功能时，可以使用Player和Recorder快速完成播放和录制功能。
 -   提供了一组控制相机的有效接口，可以让用户方便开发使用相机。
 -   开发者先创建camerakit组件对象，注册各种事件回调，这些事件回调是用来响应多媒体模块中事件响应的，之后调用创建camera就可以创建一个操作camera资源的对象，使用这个对象可以启动预览、录像或抓拍取流，及设置取流的相关参数。
