update zh-cn/contribute/许可证与特殊许可证评审指导.md. update links
Signed-off-by: NEEN <neen.yang@huawei.com>

--- a/zh-cn/contribute/许可证与特殊许可证评审指导.md
+++ b/zh-cn/contribute/许可证与特殊许可证评审指导.md
@@ -47,7 +47,7 @@ OpenHarmony项目还可能引入或依赖不同的第三方开源软件，这些
   - [PHP License 3.01](http://www.php.net/license/3_01.txt)
   - [MX4J License](http://mx4j.sourceforge.net/docs/ch01s06.html)
 
-- [Boost Software License (BSL-1.0)](https://opensource.org/licenses/BSL-1.0)
+- Boost Software License (BSL-1.0)
 
 - BSD License:
 
@@ -72,7 +72,7 @@ OpenHarmony项目还可能引入或依赖不同的第三方开源软件，这些
 
 - [University of Illinois/NCSA](http://opensource.org/licenses/UoI-NCSA.php)
 
-- [X.Net](http://opensource.org/licenses/xnet.php)
+- X.Net
 
 - [zlib/libpng](http://opensource.org/licenses/zlib-license.php)
 
@@ -90,7 +90,7 @@ OpenHarmony项目还可能引入或依赖不同的第三方开源软件，这些
 
 - [Adobe Postcript(R) AFM files](https://spdx.org/licenses/APAFML.html)
 
-- [Boost Software License Version 1.0](http://www.opensource.org/licenses/BSL-1.0)
+- Boost Software License Version 1.0
 
 - [WTF Public License](http://www.wtfpl.net/)
 
@@ -98,7 +98,7 @@ OpenHarmony项目还可能引入或依赖不同的第三方开源软件，这些
 
 - [UNICODE, INC. LICENSE AGREEMENT - DATA FILES AND      SOFTWARE](http://www.unicode.org/copyright.html#Exhibit1)
 
-- [Zope Public License 2.0](https://opensource.org/licenses/ZPL-2.0)
+- Zope Public License 2.0
 
 - ACE license
 
@@ -108,7 +108,7 @@ OpenHarmony项目还可能引入或依赖不同的第三方开源软件，这些
 
 - Google "Additional IP Rights Grant  (Patents)" file
 
-- [Historical Permission Notice and Disclaimer](https://opensource.org/licenses/HPND)
+- Historical Permission Notice and Disclaimer
 
 ### 不建议接纳的第三方依赖的许可证名单
 
@@ -126,7 +126,7 @@ OpenHarmony项目还可能引入或依赖不同的第三方开源软件，这些
 - Creative Commons Non-Commercial variants
 - [Sun Community Source License 3.0](http://jcp.org/aboutJava/communityprocess/SCSL3.0.rtf)
 - [GNU GPL 3](http://www.opensource.org/licenses/gpl-license.php)
-- [GNU Affero GPL 3](http://www.opensource.org/licenses/agpl-v3.html)
+- GNU Affero GPL 3
 - [BSD-4-Clause](https://spdx.org/licenses/BSD-4-Clause.html)/[BSD-4-Clause (University of California-Specific)](https://spdx.org/licenses/BSD-4-Clause-UC.html)     
 - Facebook BSD+Patents license
 - [NPL 1.0](https://spdx.org/licenses/NPL-1.0.html)/[NPL 1.1](https://spdx.org/licenses/NPL-1.1.html)
