update zh-cn/contribute/许可证与特殊许可证评审指导.md. update link
Signed-off-by: NEEN <neen.yang@huawei.com>

--- a/zh-cn/contribute/许可证与特殊许可证评审指导.md
+++ b/zh-cn/contribute/许可证与特殊许可证评审指导.md
@@ -124,7 +124,7 @@ OpenHarmony项目还可能引入或依赖不同的第三方开源软件，这些
 - [Confluent Community License Version 1.0](https://www.confluent.io/confluent-community-license/)
 - [Any license including the Commons Clause License Condition v1.0](https://commonsclause.com/)
 - Creative Commons Non-Commercial variants
-- [Sun Community Source License 3.0](http://jcp.org/aboutJava/communityprocess/SCSL3.0.rtf)
+- Sun Community Source License 3.0
 - [GNU GPL 3](http://www.opensource.org/licenses/gpl-license.php)
 - GNU Affero GPL 3
 - [BSD-4-Clause](https://spdx.org/licenses/BSD-4-Clause.html)/[BSD-4-Clause (University of California-Specific)](https://spdx.org/licenses/BSD-4-Clause-UC.html)     
