update zh-cn/contribute/贡献文档.md. update link
Signed-off-by: NEEN <neen.yang@huawei.com>

--- a/zh-cn/contribute/贡献文档.md
+++ b/zh-cn/contribute/贡献文档.md
@@ -13,7 +13,7 @@
 
 ## License
 
-[Creative Commons License version 4.0](https://creativecommons.org/licenses/by/4.0/legalcode)
+Creative Commons License version 4.0
 
 ## 贡献方式
 
